--- a/gb/22/10/11/n13843210.md
+++ b/gb/22/10/11/n13843210.md
@@ -21,39 +21,39 @@ IG:<ahref="https://www.instagram.com/shenyunworks/" target="_blank" rel="noopene
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951914.md#1">【传统音乐】神韵乐团二团 室内乐及独奏音乐会 | 首播：美东时间 3月25日 晚间8:00</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949585.md#1">【舞蹈】王琛说舞蹈 第六集：圆场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948235.md#1">【舞蹈三剑客 】神韵演员：想对年轻的自己说?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946800.md#1">【传统音乐】2022飞天艺术学院器乐大赛金奖独奏音乐会（2）罗善</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961923.md#1">【神韵早期节目】彝乡壮歌（2015年制作）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/27/n13959776.md#1">【神韵早期节目】宝蓝凤舞（2015年制作）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958577.md#1">【舞蹈三剑客】我的故事——如何在19岁时成为神韵领舞演员？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/21/n9756258.md#1" target="_blank">柬埔寨女儿的记忆：《他们先杀了我父亲》</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/26/n11280714.md#1" target="_blank">女裁缝的别样生意经</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/10/n11102523.md#1" target="_blank">马吉卫：难以平复的伤疤</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/14/n11384505.md#1" target="_blank">欧洲名校毕业的一代骄子 难忘童年之痛</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951783.md#1">挣脱监控 新西兰中领馆出逃员工心路历程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947935.md#1">才能出众护国大将军 因一句话遭现世报而绝嗣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950568.md#1">明末改朝换代关帝君显灵  天命不可违人算不如天算</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950328.md#1">【未解之谜】消失的《小人国》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945639.md#1">【经典小说选登】老门生三世报恩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952581.md#1">【中国禁闻】中共发布机构改革全文 强化极权党控</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13952758.md#1">【未解之谜】别找了 外星人早来地球了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13952941.md#1">【晚间新闻】人大提案泄心肌炎真相 卫健委内部通知引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950100.md#1">习近平连任后确定访俄 专家析背后原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952140.md#1">习近平是个好领导吗？中国AI机器人不敢答</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13951986.md#1">【新唐人大视野】李强如何上位？党媒发文泄密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951916.md#1">60岁许效舜考上博士班 自曝被教授一句话吓傻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951954.md#1">离婚一年半晒与汪涵合照 欧弟暴瘦引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13951154.md#1">白冰冰曝费玉清退休生活：来无影去无踪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952639.md#1">杨紫琼封后被说华人之光 黄秋生质疑用词获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951896.md#1">香港导演会颁奖 郑秀文凭《流水落花》再封后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951529.md#1">如何强化记忆力？ 世界纪录保持人教你几招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950060.md#1">抗炎抗氧化 便宜又好吃的9种超级食物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952064.md#1">银行接连倒 美国房市会不会崩？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952146.md#1">心理医师：四种自然方法缓解紧张焦虑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950859.md#1">知道10个技巧 轻松煮出美味砂锅菜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963385.md#1">【财商天下】银行危机暂解 美联储还会加息？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963374.md#1">【菁英论坛】马云回国 中国民企的春天到了吗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962742.md#1">河北邯郸街头有车辆乱撞行人 现场发出巨响</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962166.md#1">【翻墙必看】传马云被“游说”回国细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962806.md#1">习和西班牙首相会面 一关键问题新华社不敢提</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962030.md#1">74岁王刚清空社交账号内容 网友质疑出状况</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958891.md#1">每天接触毒素易生病 5种奇特排毒法超简单</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961835.md#1">研究：越常吃垃圾食品 大脑就越讨厌健康食物</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/11/n13843210.htm">【神韵原创音乐】台湾原住民舞曲</a></p><hr>
