--- a/gb/23/1/24/n13914900.md
+++ b/gb/23/1/24/n13914900.md
@@ -6,12 +6,12 @@
 <h6>租船公司顾问冈村俊美（Okamura Toshimi）观看了神韵世界艺术团2023年1月24日在东京新宿文化中心（Shinjuku Bunka Center）的第ㄧ场演出。（龚安妮／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2023年01月25日讯】(大纪元日本东京记者站报导)“技艺精湛高超，卓越超群”，“演员们清纯柔美，舞蹈绚丽多姿，尽善尽美”。三年疫情之后再次看到<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>，冈村俊美感到“很惊喜”，下次神韵再来“会带朋友一起来看”。</p>
-<p>租船公司顾问冈村俊美（Okamura Toshimi）1月24日下午观看了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>世界艺术团在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC%E4%B8%9C%E4%BA%AC%E6%96%B0%E5%AE%BF%E6%96%87%E5%8C%96%E4%B8%AD%E5%BF%83.md#1">日本东京新宿文化中心</a>（Shinjuku Bunka Center）的第一场演出，他非常喜欢神韵演出。</p>
-<p>“我很喜欢三国志赵云的那个节目。少数民族的舞蹈也非常生动有趣，雄健有力，舞姿别致，身体柔韧，一般很难观赏得到”，“太了不起了，他们（充满活力的）翻腾跳跃给我带来了活力”。冈村俊美表示。</p>
-<p>对反映法轮功受迫害的节目，冈村俊美认为很难得，“我在中国听说过，感觉有好多人被迫害了。今天也有很多中国人来看，对他们来说很难得，因为现在在中国是看不到的。”而神韵在全世界的巡回演出“能够让全世界都知道法轮功在被迫害这一事实”。</p>
-<p>对神韵演出复兴中国传统文化的努力，冈村俊美认为很有意义，“对古老传统的守护是很重要的事”。</p>
-<p>冈村俊美最后说，“三年前第一次看神韵时就觉得这个演出太优秀了，所以我今天又来了”，“下次神韵来演出我还要来，今天我是自己一个人来的，下次我会带朋友一起来看。”</p>
+	<p>【大纪元2023年01月25日讯】（大纪元日本东京记者站报导）“技艺精湛高超，卓越超群”，“演员们清纯柔美，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>绚丽多姿，尽善尽美”。三年疫情之后再次看到<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>，冈村俊美感到“很惊喜”，下次神韵再来“会带朋友一起来看”。</p>
+<p>租船公司顾问冈村俊美（Okamura Toshimi）2023年1月24日下午观看了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>世界艺术团在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC%E4%B8%9C%E4%BA%AC%E6%96%B0%E5%AE%BF%E6%96%87%E5%8C%96%E4%B8%AD%E5%BF%83.md#1">日本东京新宿文化中心</a>（Shinjuku Bunka Center）的第一场演出，他表示非常喜欢神韵演出。</p>
+<p>“我很喜欢《三国志》里赵云的那个节目。少数民族的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>也非常生动有趣，雄健有力，舞姿别致，还身体柔韧，一般很难观赏得到。”冈村俊美说，“太了不起了，他们（充满活力的）翻腾跳跃给我也带来了活力。”</p>
+<p>对展现法轮功反迫害的节目，冈村俊美认为很难得，“我在中国时听说过，感觉有好多人被迫害了。今天也有很多中国人来看，这对他们来说很难得，因为（这样的演出）现在在中国是看不到的。”他更表示，神韵在全世界的巡回演出“能够让全世界都知道法轮功被（中共）迫害的这一事实”。</p>
+<p>对神韵演出复兴<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">中国传统文化</a>的努力，冈村俊美认为很有意义，“对古老传统的守护是很重要的事”。</p>
+<p>冈村俊美最后说，“三年前第一次看神韵时，就觉得这个演出太优秀了，所以我今天又来了”，“下次神韵来演出我还要来，今天我是自己一个人来的，下次我会带朋友一起来看。”</p>
 <p>责任编辑：周雅</p>
 	
 <hr>
@@ -28,31 +28,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/23/n2974481.md#1" target="_blank">鲜为人知的马克思之四：好斗的马克思</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/14/n3964268.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑（2）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/4/n9922246.md#1" target="_blank">林辉：文革冤案中周恩来的落井下石与冷酷</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/1/n10824187.md#1" target="_blank">一本书让70岁的她成为有福人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910412.md#1">楚一丁：天道示警——三年死了四亿人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/18/n13909653.md#1">【未解之谜】西方极乐世界游记（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906912.md#1">传统年俗代代传  只为守护天人相系的纽带</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910383.md#1">【百年真相】差点改写九一三事件 林豆豆挨整始末</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13908165.md#1">【杨延昭传奇】一亩泉三战恶龙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914233.md#1">【神韵早期节目】蒙古女子筷子舞（2015年制作）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914646.md#1">【晚间新闻】棺材板上办春晚 尸骨堆里庆新年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914176.md#1">【新闻大家谈】蓬佩奥曝光白宫秘闻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/17/n13908788.md#1">在Costco买七样东西囤货 可在一整年省钱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13913032.md#1">春晚小品演出缩短2分多钟 触发所有应急预案</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13912765.md#1">疫情冲击春晚 演员染疫无法排练 节目大删减</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13913498.md#1">穿30年前旗袍拜年 55岁周慧敏冻龄外表获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13913535.md#1">沈腾春晚小品《坑》窜热搜 话题惊动中纪委</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914214.md#1">林志颖康复露面气色佳 拍品牌形象片拜年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13912840.md#1">除夕夜广发200个红包 郁方分享有意义的一天</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914317.md#1">李若彤分享冻龄秘笈：20多年没喝汽水</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13913695.md#1">寒冬还没来 2023年影响美国地产的重磅消息！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910496.md#1">学会放下，幸福就来了！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905189.md#1">空间小杂物多 运用收纳小物 浴室不再乱糟糟</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13913652.md#1">【美食天堂】鲜虾锅贴做法～ 皮酥脆馅料多汁美味！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13913310.md#1">香草精用完了？ 这八类食材可替代</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963483.md#1">【新闻看点】中共军机越台海中线 习近平在备战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963063.md#1">惧政权不稳 中共推“一村一警”扩大监控</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962128.md#1">黄秋生首演废佬角色 大赞影片导演真勇敢</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949145.md#1">想成为一个有钱人？ 财务自由的七大好处</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/24/n13914900.htm">二观神韵再惊喜 公司顾问下次带朋友一起来</a></p><hr>
